cmake_minimum_required(VERSION 3.26)
project(linklist)

set(CMAKE_CXX_STANDARD 17)

add_executable(linklist main.cpp
        def.h
        createlist.cpp
        deletelocate.cpp
        linklist.h
        printlist.cpp
        deleteduplicate.cpp
        inverselist.cpp
        cyclemove.cpp
        cyclemove.cpp
        mergelist.cpp
        createnull.cpp
        Linklist.cpp
)
